1. Collection API Улучшения[#220836]